@@ -1,5 +1,6 @@
 * Thu Jul 12 2018 Trevor Vaughan <tvaughan@onyxpoint.com> - 0.1.5-0
 - Added support for OEL and Puppet 5
+- Add a message to the reboot_notify resource to be more helpful
 
 * Mon Feb 26 2018 Trevor Vaughan <tvaughan@onyxpoint.com> - 0.1.4-0
 - Updated testing configurations including GCE suite information,
